<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_resize2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="199dp"
        android:layout_height="67dp"
        android:text="@string/txtintro"
        android:textColor="#100F10"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195" />

    <Button
        android:id="@+id/btnintro"
        android:layout_width="286dp"
        android:layout_height="58dp"
        android:text="@string/btnintro"
        android:textColor="#212121"
        app:backgroundTint="#FF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.127" />

    <Button
        android:id="@+id/btncalculator"
        android:layout_width="286dp"
        android:layout_height="58dp"
        android:text="@string/btnfood1"
        android:textColor="#37474F"
        app:backgroundTint="#8BC34A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnintro"
        app:layout_constraintVertical_bias="0.288" />

    <Button
        android:id="@+id/btnrecipe"
        android:layout_width="284dp"
        android:layout_height="62dp"
        android:text="@string/btnrecipe"
        android:textColor="#4E342E"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toTopOf="@+id/btncalculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnintro"
        app:layout_constraintVertical_bias="0.529" />

</androidx.constraintlayout.widget.ConstraintLayout>



