<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8E8E3"
    tools:context=".BMIcalculator">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="263dp"
        android:layout_height="33dp"
        android:text="@string/txtbmi"
        android:textColor="#E65100"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.668"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094" />

    <EditText
        android:id="@+id/numkg"
        android:layout_width="213dp"
        android:layout_height="70dp"
        android:ems="10"
        android:hint="@string/hinrecipe1"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.091"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/numheight"
        android:layout_width="223dp"
        android:layout_height="71dp"
        android:ems="10"
        android:hint="@string/hintrecipe2"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numkg"
        app:layout_constraintVertical_bias="0.101"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btnbmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnbmirecipe"
        android:textColor="#4E342E"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numheight"
        app:layout_constraintVertical_bias="0.155" />

    <TextView
        android:id="@+id/txtresultbmi"
        android:layout_width="194dp"
        android:layout_height="85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnbmi"
        app:layout_constraintVertical_bias="0.484" />
</androidx.constraintlayout.widget.ConstraintLayout>